--- a/index.html
+++ b/index.html
@@ -2,22 +2,29 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frontend Mentor</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <title>Frontend Mentor | QR code component</title>
+  <link rel="stylesheet" href="style.css" media="screen">
+
 
 </head>
 
 <body>
-    <div class="container">
-        <header>
-            <img src="image-qr-code.png" alt="qr-code">
-        </header>
-        <main>
-            <h2>Improve your front-end skills by building projects</h2>
-            <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </main>
-    </div>
+
+  <div class="contanier">
+    <header class="image">
+      <img src="images/image-qr-code.png" alt="qr-code">
+    </header>
+    <main>
+      <h2>Improve your front-end skills by building projects</h2>
+      <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </main>
+  </div>
+
 </body>
+
 </html>
